fixed bug of element overlapping nav

--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,7 @@ a {
   width: 100%;
   background-color: #fff;
   border-bottom: 1px solid #e2e2e2;
+  z-index: 1;
 }
 
 .nav {
